--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/drawer": "*",
     "@react-navigation/material-top-tabs": "^7.1.1",
@@ -24,6 +25,7 @@
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.2.2",
     "expo": "~52.0.37",
+    "expo-auth-session": "^6.0.3",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
     "expo-file-system": "~18.0.11",
@@ -40,12 +42,14 @@
     "expo-updates": "~0.27.1",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.4.0",
+    "gapi-script": "^1.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-css-modules": "^0.3.5",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^8.2.1",
     "react-native-pager-view": "6.5.1",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
